# waveshare-ups-hat-e

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
examples/: force_power_off.rs  ups_monitor.rs
src/: error.rs  lib.rs  main.rs  registers.rs
