[package]
name = "waveshare-ups-hat-e"
description = "A Rust library to monitor the status of a Waveshare UPS HAT E on a Raspberry Pi"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/int08h/waveshare-ups-hat-e"
authors = ["Stuart Stock"]

[dependencies]
i2cdev = "0.6.2"